fix review spacing

--- a/src/components/pages/Review/Review.css
+++ b/src/components/pages/Review/Review.css
@@ -1,9 +1,10 @@
 .review-subtitle {
-    margin-top: 4rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
 }
 
 .review-email {
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
 }
 
 .review-information-body {
